--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "framer-motion": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
