--- a/api/package.json
+++ b/api/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/firasjaber/restful-api-ts-boilerplate#readme",
   "dependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express-validator": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-status-monitor": "^1.3.3",
