--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,10 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1"
   }
 }
